<resources>
    <string name="app_name">Audiometry</string>

    <string name="title">Audiometria tonalna</string>
    <string name="what">O audiometrii</string>
    <string name="do_test">Wykonaj badanie</string>
    <string name="saved">Przegląd badań</string>
    <string name="hygiene">Dbanie o słuch</string>

    <string name="description">Icon</string>
    <string name="description2">Result</string>

    <string name="start_test">Start</string>

    <string name="play">Odtwórz dźwięk</string>
    <string name="earphones">Słuchawki</string>
    <string name="speaker">Głośnik</string>
    <string name="heard">Dźwięk słyszalny</string>
    <string name="not_heard">Dźwięk niesłyszalny</string>
    <string name="treshold">Dźwięk na granicy słyszalności</string>

    <string name="save">Zapisz badanie</string>

    <string name="take_care">Słuch to jeden z tych zmysłów, bez którego większość z nas nie wyobraża sobie życia. Dlaczego więc tak rzadko się o niego troszczymy? Poznaj kilka ważnych raz, jak dbać o słuch tak, aby jego pogorszenie nie przyszło za wcześnie.\n \n
        Dlaczego słyszymy?\n
        Zacznijmy od podstaw – skąd biorą się dźwięki? Jak działają uszy? Dźwięk to inaczej fala akustyczna, czyli drgające powietrze. To właśnie ta fala dostaje się przez przewód słuchowy i jest dobierana przez błonę bębenkową. Następnie za pomocą trzech kostek – (najmniejszych w ludzkim organizmie) młoteczka, kowadełka i strzemiączka drganie jest przenoszone do ucha wewnętrznego. Tu dochodzi do przekształcenia drgania w impuls nerwowy, który następnie trafia do ślimaka wypełnionego płynami ustrojowymi. W ślimaku znajdują się komórki rzęskowe, odpowiadające za odbiór impulsu nerwowo i przekazanie go do mózgu, gdzie jest interpretowany.\n \n
        Skąd biorą się problemy ze słuchem?\n
        Chociaż problemy z prawidłowym słyszeniem odczuwa zdecydowana większość osób w podeszłym wieku, to kłopoty nie omijają również osoby młode. Szacuje się, że kilka dzieci na 1000 urodzeń może mieć wrodzone wady słuchu. Aby wiedzieć, jak dbać o słuch, warto poznać podstawowe zagrożenia. W przypadku nabytych wad, lista powodów jest dość znaczna:\n \n
        1. Podstawowy z nich to hałas. Nieustanne przebywanie bez ochrony w miejscach wyjątkowo głośnych lub w których panuje ciągły hałas może w ciągu kilku lat mocno nadwyrężyć narządy słuchu. Podobnie jak słuchanie muzyki dokanałowymi słuchawkami czy na koncertach. Coraz częściej na takich wydarzeniach możemy dostrzec odpowiedzialnych rodziców, którzy chronią uszy swoich dzieci odpowiednimi tłumiącymi nausznikami. Warto z tej opcji skorzystać.\n
        2. Na pogorszenie jakości słuchu wpływają choroby takie jak: stwardnienie rozsiane, cukrzyca, miażdżyca czy nadciśnienie tętnicze. Dolegliwości te mogą również wywoływać szumy uszne, o których pisaliśmy już w tym miejscu.\n
        3. Uszkodzenia narządów słuchu czy problemy ze słyszeniem mogą pojawiać się po powikłaniach po chorobach dziecięcych (świnka, ospa). Wpływ mają również niektóre leki.\n
        4. Urazy mechaniczne, wypadki, nagłe zmiany ciśnienia (nurkowanie, skoki spadochronowe). Wszelkie nieleczone zapalenia i choroby narządów słuchu. Ich pełne wyleczenie jest kluczowe w profilaktyce utrzymania odpowiedniego poziomu słyszenia.\n \n
        Jak dbać o słuch?\n
        Wracając więc do głównego pytania, odpowiedź jest złożona. Najprościej unikać źródeł hałasu i znacząco ograniczyć słuchanie muzyki przez słuchawki. Te czynności na pewno mogą nam dłużej zachować dobry odbiór dźwięków. Jeśli jednak jest to niemożliwe, to używajmy stoperów, chroniących błonę bębenkową przed uszkodzeniem. Możemy również wykonywać badania kontrolne, które szybko wykażą, czy mamy jakikolwiek problem ze słyszalnością dźwięków o konkretnej częstotliwości. Podobnie jak w wypadkach wielu innych dysfunkcji, to aby im zapobiegać, warto sięgnąć po witaminy, zwłaszcza te o właściwościach antyoksydacyjnych. Mowa tu o witaminach C, E, A, czyli tak jak często powtarzamy – warzywa i owoce muszą być podstawą zdrowej, zrównoważonej diety. Pamiętajmy również, aby nie używać patyczków do czyszczenia uszu i usuwania woskowiny. Bardzo łatwo wówczas uszkodzić lub nawet przebić błonę bębenkową. W najlepszym wypadku zatkamy sobie uszy dociskając w głąb woskowinę. Wtedy konieczna będzie interwencja lekarska Jeśli nasze uszy produkują za dużo woskowiny, lepiej użyć specjalnych środków, które ją zmiękczą i ułatwią wydalenie.</string>

    <string name="audiometry">Progowa audiometria tonalna, jest badaniem subiektywnym, podczas którego sprawdza się zdolność słyszenia progowego czystych tonów (tj. bez zakłóceń) w zakresie częstotliwości od 250 Hz do 8 kHz.\n\nW tradycyjnym badaniu dźwięk jest przekazywany za pomocą nausznych słuchawek powietrznych lub słuchawek kostnych. W aplikacji została zaimplementowana zarówno werjsa tradycyjna, jak i uproszczona, polegająca na przekazywaniu dźwięku droga powietrzną, bez użycia słuchawek.\n\nCelem badania jest zidentyfikowanie najcichszego dźwięku słyszanego przez osobę badaną. Test jest subiektywny, ponieważ to osoba badana określa, czy dźwięk jest dla niej słyszalny, czy nie.
    </string>

    <string name="instruction">1. Wybierz, czy chcesz wykonać badanie za pomocą słuchawek czy głośnika urządzenia.\n\n
    2. Naciśnij przycisk "START", aby przejść do testu.\n\n
    3. Nacisnij przycisk "ODTWÓRZ DŹWIĘK", aby usłyszeć dźwięk.\n\n
    4. Naciśnij przycisk:\n
        \t - "DŹWIĘK SŁYSZALNY", jeśli dobrze słyszysz odtworzony dźwięk,\n
        \t - "DŹWIĘK NIESŁYSZALNY", jeśli dźwięk był niesłyszalny,\n
        \t - "DŹWIĘK NA GRANICY SŁYSZALNOŚCI", aby zaznaczyć próg słyszalności i przejść do kolejnego dźwięku.\n\n
    5. Badanie zakończy się automatycznie po przesłuchaniu wszystkich dźwięków, a w nowym oknie zostanie wyświetlony wynik.
    </string>

    <string name="info">Instrukcja</string>
</resources>