<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="316dp"
        android:layout_height="322dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/both" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="312dp"
        android:layout_height="276dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIcon">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onStartClick"
            android:text="@string/start_test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkEarphones"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/earphones" />

            <CheckBox
                android:id="@+id/checkSpeaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speaker" />
        </LinearLayout>

        <Button
            android:id="@+id/btnHear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onHearClick"
            android:text="@string/heard" />

        <Button
            android:id="@+id/btnNotHear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onNotHearClick"
            android:text="@string/not_heard" />

        <Button
            android:id="@+id/btnTreshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onThresholdClick"
            android:text="@string/treshold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>