<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/ivEarIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivEarIcon"
        android:layout_width="269dp"
        android:layout_height="265dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/listen" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEarIcon"
        app:rowCount="2">

        <Button
            android:id="@+id/btnStartTest"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:onClick="onStartTestClick"
            android:text="@string/do_test" />

        <Button
            android:id="@+id/btnSavedTests"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:onClick="onSavedTestsClick"
            android:text="@string/saved" />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:onClick="onAboutClick"
            android:text="@string/what" />

        <Button
            android:id="@+id/btnArticles"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:onClick="onArticlesClick"
            android:text="@string/hygiene" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>